# CLEF2025-CheckThat

task1/: .gitignore  pyproject.toml  result_history.txt
task1/baseline/: __init__.py  baseline.py
task1/misc/: show_data_stats.py
task1/scorer/: __init__.py  evaluate.py
task1/task1/: __init__.py  config.py  pipelines.py
task1/task1/models/: MLP.py  encoders.py
task1/task1/monolingual/: __init__.py  arabic.py  arabic_finetune.ipynb  bulgarian.py  bulgarian_finetune.ipynb  english.py  english_few_shot.ipynb  english_finetune.ipynb  english_lora.ipynb  english_lora.py  german.py  german_finetune.ipynb  italian.py  italian_finetune.ipynb
task1/task1/multilingual/: __init__.py  arabic.py  bulgarian.py  english.py  german.py  italian.py  multilingual_lora.ipynb
task1/task1/pipelines/: BasePipeline.py  EvalPipeline.py  EvaluationPipeline.py  EvaluationPipelineNN.py  IngestionPipeline.py  MasterPipeline.py  TrainPipeline.py  TrainPipelineNN.py
