[project]
name = "task1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "accelerate>=1.6.0",
    "fastparquet>=2024.11.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "pydantic>=2.11.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=4.0.2",
    "transformers>=4.51.0",
]
